@@ -36,6 +36,10 @@ Changes from 0.6-0 to 0.7-0
     recycling rule. Grouping occurs where points require multiple
     elements. (Simon)
 
+13. Line properties such as linejoin and lineend are now understood.
+    (Simon)
+
+
 Changes from 0.5-10 to 0.6-0
 ============================
 
